--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   get: ^4.6.5
   dots_indicator: ^2.1.0
   flutter_bloc: ^8.1.2
+  fluttertoast: ^8.2.1
+  sqflite: ^2.2.8
+  path_provider: ^2.0.14
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
